(Format: Year/Month/Day)
Changes for 0.9.6:
*03/10/27:
  * Change FbWinFrame to NOT reparent client windows into clientarea (Simon)
    - fixes (I think) java bug with missing drawing bits of window
    - allows us to remove some dodgy "and for parent" hacks (not done in 
      this patch, but will be in new action system which depends on this)
    - clientarea still exists for future implementation of improved 
      sizing, particularly to provide a backing to clients that don't 
      take up the whole area.
      FbWinFrame.hh/cc Window.hh/cc fluxbox.cc
*03/10/26:
  * Fixed bug in FbWindow::setNew  (Henrik)
    It didn't update member variables
	FbWindow.cc	
*03/10/25:
  * Fixed whitespace in filenames for pixmaps (Henrik)
    StringUtil.hh/cc, ThemeItems.hh
  * Added MoveTo/ResizeTo commands (Thanks sylvinus)
    Moves/Resize the window absolute coordinates
    * usage: MoveTo 100 100
             ResizeTo 100 100
*03/10/20:
  * fbgm updates from Han
    - allow options in ~/.fluxbox/menuconfig
    - update dutch locales a bit.
    - fbrun options added in menuconfig
    - added /usr/X11R6 to searchpath
    - some other random fixes/updates
    fluxbox-generate_menu
*03/10/17:
  * fbsetbg update from Han - new option to explicitly say 
    which wallpaper setting to use, plus minor changes
    fbsetbg
*03/10/15:
  * Fix event manager target window (Simon)
    -> Some events don't have the main window as xany.window
       (e.g. XConfigureRequestEvent has the parent there)
    -> Fixes missing configurerequest events for e.g. galeon
    EventManager.hh/cc fluxbox.cc
*03/10/14:
  * Bug fix in NextWindow/PrevWindow Command  (Henrik)
    it was only executed when last event = keyevent
    WorkspaceCmd.cc	
  * New theme items:
    * toolbar.button.size for fixed buttons in the toolbar
    * toolbar.button.borderWidth
    * toolbar.button.borderColor
    * toolbar.button
    * toolbar.button.color
    * toolbar.button.colorTo
    * toolbar.button.pixmap